<resources>
    <string name="app_name">War Game PRO</string>
    <string name="start_score">0</string>
    <string name="game_name">War Game</string>
    <string name="background">background</string>
    <string name="player">player</string>
    <string name="card">card</string>
    <string name="fight">FIGHT!</string>
    <string name="game_over">THE WINNER IS:</string>
    <string name="winner_name">Gal Madar</string>
    <string name="winner_medal">medal</string>
    <string name="replay_icon">replay icon</string>
    <string name="records">BEST RECORDS</string>
    <string name="new_game">New Game</string>
    <string name="title_activity_maps2">Map</string>
</resources>