<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/iron_background"
        android:scaleType="fitXY"
        android:contentDescription="@string/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/winner_LBL_game_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textSize="50sp"
                android:textColor="@color/dark_green_700"
                android:layout_gravity="center"
                android:layout_weight="0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/win"
                    android:contentDescription="@string/winner_medal"/>

                <ImageView
                    android:id="@+id/main_IMG_winner"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/player_girl"
                    android:layout_weight="1"
                    android:contentDescription="@string/card"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/win"
                    android:contentDescription="@string/winner_medal"/>

            </LinearLayout>

            <TextView
                android:id="@+id/winner_LBL_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winner_name"
                android:textSize="50sp"
                android:textColor="@color/dark_green_700"
                android:layout_gravity="center"
                android:layout_weight="0"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>