<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/iron_background"
        android:scaleType="fitXY"
        android:contentDescription="@string/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:layout_weight="0"
            >

            <TextView
                android:id="@+id/main_LBL_score_player_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_score"
                android:textSize="50sp"
                android:textColor="@color/yellow"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/player_boy"
                android:contentDescription="@string/player"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name"
                android:textSize="50sp"
                android:textColor="@color/dark_green_700"
                android:layout_gravity="center"
                android:layout_weight="0"/>

            <ProgressBar
                android:id="@+id/main_PGR_game_progress"
                android:progressDrawable="@drawable/progress_bar_states"
                android:layout_width="fill_parent"
                android:layout_height="8dip"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminateOnly="false"
                android:max="100">
            </ProgressBar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/main_IMG_player_A_card"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/player_boy"
                    android:layout_weight="1"
                    android:contentDescription="@string/card"/>


                <ImageView
                    android:id="@+id/main_IMG_player_B_card"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/player_girl"
                    android:layout_weight="1"
                    android:contentDescription="@string/card"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/main_BTN_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@drawable/play_button_timer"
                android:scaleType="fitCenter"
                android:background="@drawable/play_button_background"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/main_LBL_score_player_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_score"
                android:textSize="50sp"
                android:textColor="@color/yellow"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/player_girl"
                android:contentDescription="@string/player"/>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>